--- a/style.css
+++ b/style.css
@@ -7,21 +7,29 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  width: 70%;
+  width: 60%;
   margin: auto;
 }
 
 /* h1 styling */
 h1 {
+  text-align: center;
   font-family: "Orbitron", sans-serif;
   color: rgb(218, 214, 214);
+  background-color: rgb(10, 10, 10);
+  padding: 1em;
+  width: 100%;
+  border-radius: 20px;
 }
+
 /* Paragraph styling */
 .desc {
+  margin-bottom: 3em;
   color: rgb(218, 214, 214);
   font-family: "Asap Condensed", sans-serif;
 }
 
+/* Button container styling */
 .btn-container {
   display: flex;
   justify-content: center;
@@ -37,5 +45,10 @@ h1 {
   border-radius: 20px;
   color: rgb(218, 214, 214);
   background-color: rgb(19, 18, 18);
-  border: 5px solid rgb(75, 74, 74);
+  border: 5px solid rgb(0, 0, 0);
+  box-shadow: 0 0 20px rgb(78, 184, 245);
+}
+
+.btn:hover {
+  box-shadow: 0 0 40px rgb(78, 184, 245);
 }
