Adjust button padding for each side

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  width: 60%;
+  width: 55%;
   margin: auto;
 }
 
@@ -38,7 +38,10 @@ h1 {
 
 /* Button styling */
 .btn {
-  padding: 50px;
+  padding-top: 50px;
+  padding-right: 90px;
+  padding-left: 90px;
+  padding-bottom: 50px;
   font-size: 2em;
   font-family: "Orbitron", sans-serif;
   margin: 1em;
