--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /* Body styling with background image */
 body {
-  background-image: url("./images/excalibur.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
   background-color: rgb(31, 30, 30);
+  background-image: url("./images/excalibur.jpg");
 }
 
 /* Div container */
@@ -16,7 +16,7 @@ body {
   padding-top: 1em;
   padding-right: 3em;
   padding-left: 3em;
-  padding-bottom: 25em;
+  padding-bottom: 20em;
   margin: auto;
   margin-top: -1em;
   border-bottom-left-radius: 20px;
@@ -28,18 +28,18 @@ body {
 h1 {
   text-align: center;
   font-family: "Orbitron", sans-serif;
+  width: 100%;
+  padding: 1em;
+  border-radius: 20px;
   color: rgb(218, 214, 214);
   background-color: rgb(10, 10, 10);
-  padding: 1em;
-  width: 100%;
-  border-radius: 20px;
 }
 
 /* Paragraph styling */
 .desc {
   margin-bottom: 3em;
-  color: rgb(218, 214, 214);
   font-family: "Asap Condensed", sans-serif;
+  color: rgb(218, 214, 214);
 }
 
 /* Button container styling */
@@ -51,29 +51,32 @@ h1 {
 
 /* Button styling */
 .btn {
+  font-size: 2em;
+  font-family: "Orbitron", sans-serif;
   padding-top: 50px;
   padding-right: 90px;
   padding-left: 90px;
   padding-bottom: 50px;
-  font-size: 2em;
-  font-family: "Orbitron", sans-serif;
   margin: 1em;
   border-radius: 20px;
   color: rgb(218, 214, 214);
-  background-color: rgb(19, 18, 18);
   border: 5px solid rgb(0, 0, 0);
+  background-color: rgb(19, 18, 18);
   box-shadow: 0 0 20px rgb(78, 184, 245);
 }
 
+/* Removes button blue outline */
 .btn:focus {
   outline: 0;
 }
 
+/* Add button click effect */
 .btn:active {
   background-color: rgb(0, 183, 255);
   color: rgb(19, 18, 18);
   transform: translateY(2px);
 }
+
 /* Button hover effect */
 .btn:hover {
   box-shadow: 0 0 40px rgb(78, 184, 245);
