--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ h1 {
 }
 
 /* Button styling */
-.btn {
+button {
   font-size: 2em;
   font-family: "Orbitron", sans-serif;
   padding-top: 50px;
@@ -66,18 +66,18 @@ h1 {
 }
 
 /* Removes button blue outline */
-.btn:focus {
+button:focus {
   outline: 0;
 }
 
 /* Add button click effect */
-.btn:active {
+button:active {
   background-color: rgb(0, 183, 255);
   color: rgb(19, 18, 18);
   transform: translateY(2px);
 }
 
 /* Button hover effect */
-.btn:hover {
+button:hover {
   box-shadow: 0 0 40px rgb(78, 184, 245);
 }
